@@ -1,3 +1,12 @@
+2020-12-19  Morten Welinder  <terra@gnome.org>
+
+	* src/sheet.c (sheet_range_unrender): New function.
+
+	* src/sheet-conditions.c (csgd_changed): Force rerendering of
+	cells.
+	(collect_group_deps_rr): Improve the deduced dependency range for
+	semi-absolute references.
+
 2020-12-18  Morten Welinder  <terra@gnome.org>
 
 	* src/sheet-conditions.c (update_group): Fix eval pos -- it's
